# swallet

./: .gitignore  CLAUDE.md  Cargo.toml  squads_seeds.txt
.github/workflows/: android.yml  macos.yml  release.yml
crates/swallet-core/: Cargo.toml
crates/swallet-core/examples/: debug_delegate.rs  debug_execute.rs  test_proposal_flow.rs
crates/swallet-core/idls/: nara_agent_registry.json  nara_quest.json  nara_skills_hub.json
crates/swallet-core/src/: lib.rs  service.rs
crates/swallet-core/src/chain/: mod.rs  solana.rs
crates/swallet-core/src/config/: defaults.rs
crates/swallet-core/src/crypto/: mod.rs
crates/swallet-core/src/multisig/: hyperlane.rs  mod.rs  presets.rs  proposals.rs  squads.rs
crates/swallet-core/src/staking/: mod.rs  sol_staking.rs
crates/swallet-core/src/storage/: data.rs  mod.rs
crates/swallet-core/src/transfer/: eth_transfer.rs  sol_transfer.rs
crates/swallet-tauri/: Cargo.toml  tauri.conf.json
crates/swallet-tauri/icons/: icon.icns
crates/swallet-tauri/icons/android/values/: ic_launcher_background.xml
crates/swallet-tauri/src/: error.rs  lib.rs  main.rs  state.rs
crates/swallet-tauri/src/commands/: auth.rs  balance.rs  mod.rs  multisig.rs  staking.rs  transfer.rs  wallet.rs
crates/swallet-tui/: Cargo.toml
crates/swallet-tui/src/: app.rs  main.rs
crates/swallet-tui/src/tui/: event.rs  state.rs
crates/swallet-tui/src/tui/screens/: add_wallet.rs  dex.rs  main_screen.rs  mod.rs  multisig.rs  staking.rs  transfer.rs  unlock.rs
idls/: nara_quest.json  nara_skills_hub.json  nara_zk.json
src/: app.rs  error.rs  main.rs
src/chain/: ethereum.rs  mod.rs  price.rs  registry.rs  solana.rs
src/config/: defaults.rs  mod.rs
src/crypto/: encryption.rs  eth_keys.rs  mnemonic.rs  mod.rs  sol_keys.rs
src/multisig/: mod.rs  presets.rs  proposals.rs  squads.rs
src/staking/: mod.rs  sol_staking.rs
src/storage/: data.rs  encrypted.rs
src/transfer/: mod.rs  sol_transfer.rs
src/tui/: event.rs  mod.rs  state.rs
src/tui/screens/: action_menu.rs  add_wallet.rs  main_screen.rs  mod.rs  multisig.rs  staking.rs  transfer.rs  unlock.rs
src/tui/widgets/: mod.rs
ui/: build.sh  dev.sh  package-lock.json  package.json  vite.config.ts
ui/src/: app.css  app.html
ui/src/lib/: api.ts  types.ts
ui/src/lib/components/: Calculator.svelte  MnemonicInput.svelte  MultisigPanel.svelte  PasswordDialog.svelte  StakingPanel.svelte
ui/src/routes/: +page.svelte
