[package]
name = "swallet"
version = "0.1.0"
edition = "2024"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# 加密
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"

# 密钥管理
bip39 = { version = "2", features = ["rand"] }
bip32 = { version = "0.5", features = ["secp256k1"] }
hmac = "0.12"
sha2 = "0.10"
sha3 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
bs58 = "0.5"
hex = "0.4"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

# 错误处理
thiserror = "2"
anyhow = "1"

# 工具
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.32"
solana-sdk = "2"
anchor-lang = { version = "0.31.0", features = ["idl-build"] }
bytemuck = { version = "1.25.0", features = ["derive", "min_const_generics"] }
