[package]
name = "swallet-tauri"
version = "0.1.0"
edition = "2024"

[lib]
name = "swallet_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
swallet-core = { path = "../swallet-core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
solana-sdk = "2"
bs58 = "0.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-opener = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
